--- a/node/package.json
+++ b/node/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./server/index.js",
+    "env": "node -r dotenv/config ./server/db/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "populateThoughtsTable": "node ./server/db/scripts/populateThoughtsTable.js",
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "pg": "^8.7.1"
   }
