--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "nodemon ./server/index.js",
     "env": "node -r dotenv/config ./server/db/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
@@ -19,5 +19,8 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
